--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-intl": "^3.19.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-scrollspy-navigation": "^2.0.6",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1"
